--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="buttons">
+    <button class="btn" onclick="playSound('sound1.mp3')">Sound 1</button>
+    <button class="btn" onclick="playSound('sound2.mp3')">Sound 2</button>
+    <!-- Add more buttons for other sounds -->
+
+    <button class="stop" onclick="stopAllSounds()">Stop All</button>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
